# crantconnectome-haberkernlab-meshcreation

./: .gitignore  CRANTb_neuropils_LMB_mca_lca_RMB_mca_lca_LAL_RAL_CBU_CBL_LNO_RNO_LOL_ROL_LLH_RLH_LBU_RBU_LPoTu_RPoTu_v2.2_smoothedlabels.tif  LICENSE  README.md  merge_datastacks.py  pyproject.toml  shared.py  tiff_to_mesh.py
tests/: test_shared.py
